# ICTP-CAPACMS

./: CMakeLists.txt  Main.cc  README.md  simple.tar
include/: ActionInitialization.hh  DetectorConstruction.hh  MyDetectorConstruction.hh  MyPhysicsList.hh  MyPrimaryGenerator.hh  PrimaryGenerator.hh  RunAction.hh
simple/: CMakeLists.txt  GNUmakefile  simple.cc
simple/include/: ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
simple/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction.cc~  PhysicsList.cc  PrimaryGeneratorAction.cc  RE03UserScoreWriter.cc
src/: ActionInitialization.cc  DetectorConstruction.cc  MyDetectorConstruction.cc  MyPhysicsList.cc  MyPrimaryGenerator.cc  PrimaryGenerator.cc  RunAction.cc  SteppingAction.cc
